Fix: vertical alignment of event blocks in lists

--- a/css/main.css
+++ b/css/main.css
@@ -72,6 +72,7 @@
 	display: inline-block;
 	margin-bottom: 5px;
 	border-radius: 0.3em;
+	vertical-align: top;
 }
 
 
